--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>029</title>
 </head>
 <body>
+  <p><img src="_ LOGO FINAL 029 logo 300 dpi 800 x 600 radial blur 40 percent zoom.jpg" /></p>
 <p>029</p>
 </body>
 </html>
