--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 <title>029</title>
+  <style>
+    img {
+      max-width: 100%
+    }
+    p {
+      width: 80 vw;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
   <p><img src="logo.jpg" /></p>
